2003-08-05  Martin Baulig  <martin@ximian.com>

	* StreamReader.cs (DiscardBufferedData): This is only allowed on
	seekable streams.

2003-08-04  Martin Baulig  <martin@ximian.com>

	* StreamReader.cs (DiscardBufferedData): Implemented.

2003-07-29  Miguel de Icaza  <miguel@ximian.com>

	* IntPtrStream.cs (Read): Use correct offset here;  Change the
	code to use a byte* instead of an IntPtr to reduce the number of
	casts used. 

	(Read): Use Marshal.Copy instead of the now
	deprecated MemCopy.

	(IntPtrStream): New stream implementation, it maps to a region in
	memory.

2003-07-23  Duncan Mak  <duncan@ximian.com>

	* StreamReader.cs (Initialize): This method is not exposed in the
	API, mark as internal.

Fri Jul 18 14:42:42 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* MonoIO.cs: 64bit fix from Bernie Solomon <bernard@ugsolutions.com>.

2003-07-16  Dick Porter  <dick@ximian.com>

	* FileInfo.cs: Update path info when a file is moved.  Patch by
	John Luke <jluke@cfl.rr.com>, fixes bug 44253.

2003-07-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MemoryStream.cs: fixed bug #46060. Thanks to Carlos Barcenilla.

2003-06-30  Zoltan Varga  <vargaz@freemail.hu>

	* FileStream.cs (Dispose): Flush the buffer even if we don't own the
	handle.
	* FileStream.cs: Add a new constructor parameter to turn off buffering.
	This is used by the Console.OpenStandard...() methods. Also fix
	argument checking in InitBuffer(), so a zero buffer size is also 
	rejected.

2003-06-27  Dietmar Maurer  <dietmar@ximian.com>

	* Stream.cs: use async.delegate invoke 

2003-06-18  Nick Drochak <ndrochak@gol.com>

	* FileSystemInfo.cs: Refresh cache when changeing file times.

2003-06-11  Zoltan Varga  <vargaz@freemail.hu>

	* FileStream.cs: Fix errors in previous checkins:
	(Write): Only take the shortcut route if the data is longer than the
	buffer length.
	(Write): Flush the buffer before writing out the new data
	(Write): Flush the buffer after writing out a segment since otherwise